--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -10,13 +10,14 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 ul {
   list-style: none;
 }
-img {
-  width: 100%;
-  height: auto;
-}
+
 button {
   border: none;
   cursor: pointer;
@@ -26,6 +27,3 @@ input {
   border: none;
   background-color: transparent;
 }
-
-
-
